rock-paper-scissors/style.css
body {
    font-family: "Roboto", sans-serif;
    background-color: #3266CC;
    position:fixed;
    height: 100%;
    top:0px;
    bottom:0px;
    left:0px;
    right:0px;
}
#main {
    display: none;
    flex: 1 1 0;
    flex-direction: column;
    justify-content: space-between;
    position:fixed;
    top:0px;
    bottom:0px;
    left:0px;
    right:0px;
}
#buttonContainer {
    background: #DE251E;
    display: flex;
    flex: 1 1 0;
    flex-direction: row;
    justify-content: space-between;
    align-items: stretch;
    min-height: 25vh;
}
#buttonContainer button {
    background: rgba(255, 255, 255, 1);
    font-family: "Roboto", sans-serif;
    display: flex;
    flex: 1 1 0;
    min-width: 33vw;
    align-items: center;
    justify-content: center;
    font-size: 6vw;
    text-transform: uppercase;
    border: none;
}
button {
    color: black;
}
@media (hover: hover) and (pointer: fine) {
    button:hover, button:active, button:disabled {   
        animation: shake 0.5s;
        animation-iteration-count: infinite; 
    }
}
@keyframes shake {
    0% { transform: translate(1px, 1px) rotate(0deg); }
    10% { transform: translate(-1px, -2px) rotate(-1deg); }
    20% { transform: translate(-3px, 0px) rotate(1deg); }
    30% { transform: translate(3px, 2px) rotate(0deg); }
    40% { transform: translate(1px, -1px) rotate(1deg); }
    50% { transform: translate(-1px, 2px) rotate(-1deg); }
    60% { transform: translate(-3px, 1px) rotate(0deg); }
    70% { transform: translate(3px, 1px) rotate(-1deg); }
    80% { transform: translate(-1px, -1px) rotate(1deg); }
    90% { transform: translate(1px, 2px) rotate(0deg); }
    100% { transform: translate(1px, -2px) rotate(-1deg); }
}
.mainImage {
    display: flex;
    flex: 1 1 0;
    justify-content: center;
    align-items: center;
    min-height: 60vh;
    min-width: 0%;
}

.mainImage img {
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    max-height: 100%;
}

.scoreContainer {
    display: flex;
    flex-direction: row;
    min-height: 10vh;
}
.score {
    display: flex;
    flex-shrink: 1;
    flex-grow: 1;
    align-items: center;
    justify-content: center;
}
.score p {
    color: white;
    font-size: min(5vw, 10vh);
    text-transform: uppercase;
}
.post {
    background: #ffffff;
    text-transform: uppercase;
    display: none;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    flex: 1 1 0;
    border: 2vh solid white;
    min-width: 0;
    position:fixed;
    top:0px;
    bottom:0px;
    left:0px;
    right:0px;
    font-size: min(15vw, 25vh);
    color: black;
}

.post p {
    display: flex;
    align-self: center;
    justify-content: center;
}

#postImages {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-content: center;
    max-width: 20%;
    max-height: 20%;
}

#postImages img {
    display: flex;
    max-height: 100%;
}

#end {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex: 1 1 auto;
    position:fixed;
    top:0px;
    bottom:0px;
    left:0px;
    right:0px;
}
.blackout {
    animation: shake 0.5s;
    animation-iteration-count: infinite;
    transition-property: opacity;
    transition-duration: 2.5s;
    opacity: 0.0;
}
.blackoutReverse {
    animation: fadeInOpacity .5s;
    animation-iteration-count: infinite;
	animation-timing-function: ease-in-out;
}
@keyframes fadeInOpacity {
	0% { opacity: 0; }
	100% { opacity: 1; }
}
#winnerMessage {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    flex: 1 1 0;
    text-transform: uppercase;
    min-width: 0;
    font-size: 10vw;
}

#winnerMessage * {
    justify-content: center;
}
}

